cabal-version:      2.4
name:               scattered-brain
version:            0.1.0.0

author:             Samuel Gélineau
maintainer:         gelisam+github@gmail.com

executable scattered-brain
  main-is:          Main.hs
  build-depends:    base
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -W -Wall -O2
